@@ -6,14 +6,15 @@ AUX passenger-CFLAGS.patch 646 RMD160 12f1e5f80fd2694fed612226561670f9a0f7f556 S
 DIST Mod_rrd_graph-0.2.0.tar.gz 3793 RMD160 fbb9698f18fa69cdfd311b0f7d43ccfe046937f0 SHA1 12b75d833d54aece7838359ef1214fe95602c051 SHA256 fbb095b5dbab87ab0ef6be663d9837ec07efbb5df5250efe40fbbab1b898372d
 DIST chunkin-nginx-module-0.19.tgz 84817 RMD160 421457c805701d1bf740caad6d36163a32bfcfba SHA1 bb1a39de6a93db76946ea936564c6a36825ee5a1 SHA256 fb5494cf8bf449b01c73b49c5da39da614ae32be55b4dd354633e1b2dce770f0
 DIST nginx-0.8.38.tar.gz 623969 RMD160 62b23252d16a861ea092cbd8bc28882e4f84157d SHA1 8e48ac109b07f0542ccda93e5b4bab67d9598aef SHA256 a97241207e7060aa04571e313908f22e007df5b2667c42274420e6a961b2c8c5
-DIST nginx-0.8.42.tar.gz 642593 RMD160 b60c271071f9796b5f38c2136c6e2e653292ef71 SHA1 daf0b6d2f0c943c4602da94a29cba285a5a72e06 SHA256 9f9687f459a753719bf1668fba30b4cdfb2c892a0410b0b304fa663bfb276dbd
+DIST nginx-0.8.46.tar.gz 645826 RMD160 4e852c579bfc9fd4de7a79f1949f47b82a455af3 SHA1 12a3f310cbbe560c337a91896f83695671d7a72f SHA256 b9afa04f825dd4bf1ec19e94055d34971673a08ac8cd5318de58ded8f573e97f
 DIST nginx_http_push_module-0.692.tar.gz 29119 RMD160 9d2be16074cf28115af0f1d8f3646937cda649ad SHA1 72103084cad8f4d3d9a49a6b04cf780e4541605d SHA256 64868708071aa21dbc4c7a07d149dd6ec9108fb7eaf2aad5ad069406151f17fe
 DIST ngx-http-headers-more-0.08.tar.gz 71764 RMD160 63ee177d5abca7c958c88197f02a4063c88dba7c SHA1 b8c6f2499e44fd9fb84bef87b3f4588ddfa70798 SHA256 3e3bc43e98d95b8a0923cf6ec1af5644e855d15e33b6553096e02c53c69bc4d5
+DIST ngx-http-headers-more-0.13.tar.gz 76271 RMD160 b11fbdf8e6fba5327fedd22e517da36340ec2473 SHA1 29def6aa44faf906d3c400b6379d6dd65d959590 SHA256 52e2cb3b81327e9225cfa87291b93dd96b798702f8e3b0f20f06d38850fc2629
 DIST ngx_http_auth_pam_module-1.1.tar.gz 5193 RMD160 38437a1f5d34f93b22abb9f0a7181be756356d33 SHA1 d04065a512169925dda8bce710e1dc5012cac47b SHA256 ea9da5f106b952729398248cddabbe25f7a5752993e91c9b8252dbc2b03b8ecd
 DIST passenger-2.2.11.tar.gz 2058085 RMD160 54ee5ab25155adaf4b6be9dc0aee190a323254e5 SHA1 9c38d364f59cb72c14a2f4c22445252468f08c4e SHA256 9d4aa14a4dfe9daa713aa19a787e1a5bee0db9f3625e17ffebe1e5325aa20a88
-DIST passenger-2.2.12.tar.gz 2116626 RMD160 d7f82b1bac3921af4ba9e5eabb089d8a99c33814 SHA1 aec68e28afff5a8b154bb26b4537f5d5c1a80493 SHA256 cfc29ba222c156fce0ea8b51e2b8172e8ffe204b643a3f58d1092ba31e9587ac
+DIST passenger-2.2.15.tar.gz 2128473 RMD160 52d0eb505d6c19e45ccc0dac8d1e675aed505c14 SHA1 dbb2f3346061872a43efc554990d8993172c8ff9 SHA256 95a9f61070d268ecaa311539d8e28b348765ca0e1528665ef928fc4b4bcc1436
 DIST uwsgi-0.9.5.1.tar.gz 120134 RMD160 6ad9b928a9bbf764679c1db3b1326f8d445febbb SHA1 ec4a47d7f7af4cba88c750b795194cb3c780d1e5 SHA256 2efab0f2cea90261c3ee56026618955c15ac7467ba6f0dbfe9e685da28204bc1
 EBUILD nginx-0.8.38-r1.ebuild 10966 RMD160 360b2ce8de499cdc6bce73e9cc3b63fa7ed12834 SHA1 13ee7f40584175eef932e88b338faf285f22e417 SHA256 d7eac58185fc7df3379c2704ec972687ea0bc10a7a4226e5403aad7109aa719b
-EBUILD nginx-0.8.42.ebuild 10297 RMD160 f7a6fd9b4537e954d5849cc9a1cba0369fb4ceb3 SHA1 a0a7c9bc24e6f5df750e7cd96c02d48c5b450cd4 SHA256 4238d8590393a25e6373caa64d28a1271f22da4cd9107979552aa169fed9e947
-MISC ChangeLog 3447 RMD160 f046f4efe0b4e3e86c1cd8ec89feae90762dd51e SHA1 e018359a65dbe6cc8b4bb525f69470adea71d2f9 SHA256 bca3cbdce7d5670015585104bda9a71fb24808774c5a62e4b6b8a034de5f2906
+EBUILD nginx-0.8.46.ebuild 10297 RMD160 f4403e64a6326d0dab852e6c6f6ca82a56009d5b SHA1 b441a5c25c3d0aff7c6ed1101897b62585e56420 SHA256 31c9c5733d5144e747869b9e8482ee86cb4cec6a01bef3c7e96ce1a9e950fc39
+MISC ChangeLog 3552 RMD160 aa944f36c5073ec8084f322592deb54c43b57e28 SHA1 8ab0effc9dfb572420d456a4924d0d9ae5a92491 SHA256 6b85fce01b6dfde63fc450cae61e47dff8556e844d84756d1912386c00b60105
 MISC metadata.xml 700 RMD160 fdc32c78fe99a870f61c081172c198a3ebe2dae6 SHA1 af42859ae91c302e736f00a7e06cbbde7fc5d65b SHA256 5b2325acd26d95505454442f8cdf6c49f86b32b9c73e623c2a47bcfb20ccd000
