@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Jul 2010; Rion <rion4ik@notagmail.com> -nginx-0.8.42.ebuild,
+  +nginx-0.8.46.ebuild:
+  new version
+
   05 Jul 2010; Rion <rion4ik@notagmail.com> -nginx-0.8.40.ebuild,
   +nginx-0.8.42.ebuild:
   new version
